--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -20,9 +21,14 @@
     </script>
     <script type="text/javascript">
         $(function () {
+        	var msg =document.getElementById("msg").innerHTML;
+        	if(msg)
+        	{
+        		layer.alert(msg);
+        	}
             $("#btnLogin").click(function () {
                 //验证
-                if (!$("input[name='userName']").val()) {
+                if (!$("input[name='username']").val()) {
                     layer.alert("请输入用户名!");
                     return;
                 }
@@ -30,34 +36,7 @@
                     layer.alert("请填写密码!");
                     return;
                 }
-                var indexWait = 0;
-                
-                $.ajax({
-                    type: "post",
-                    url: "/MavenSSM/Home/LoginPost/",
-                    data: $("#LoginForm").formSerialize(),
-                    error: function () {
-                        layer.close(indexWait);
-                        layer.alert("网络传输错误,请稍后再试,谢谢.");
-                    },
-                    beforeSend: function () {
-                        indexWait = layer.load(0, { shade: [0.6, '#bbb'] });
-                    },
-                    success: function (json) {
-                        layer.close(indexWait);
-                        json =JSON.parse(json);
-                        if (json.result == true) {
-                        	layer.alert(json.msg);
-                            window.location.href = '/MavenSSM/home/main';
-                        }
-                        else {
-                            layer.alert(json.msg, function (index) {
-                                layer.close(index);
-                                $("input[name='password']").val('');
-                            });
-                        }
-                    }
-                });
+                $("#LoginForm").submit();
             });
         });
 
@@ -70,7 +49,7 @@
         <img th:attr="src=@{/images/logoMain.png}" alt="" class="loginLogo">
         <div class="loginBox">
             <form id="LoginForm" method="post">
-                <input type="text" name="userName" id="loginAccount" placeholder="USERNAME">
+                <input type="text" name="username" id="loginAccount" placeholder="USERNAME">
                 <input type="password" name="password" id="loginPassword" placeholder="PASSWORD">
                 <label for="sevenDays" id="sevenDaysLabel">七天免密登录</label>
                 <input type="checkbox" name="sex" id="sevenDays" />
@@ -80,8 +59,11 @@
                     <a href="" id="loginNow">立即登录</a>
                 </p>
             </form>
+            
         </div>
+        <p style="display:none" id="msg" th:text=${session.msg}></p>
         <div class="bottomBox">
+        			
             <h1>深圳升通保理有限公司</h1>
             <p>
                 <span>Copyright©2016 深圳升通保理有限公司 xxxxx</span>
