--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+
+<html>
 <head>
-<meta charset="utf-8">
-<title>Main</title>
+    <meta charset="UTF-8">
+    <title>升通保理管理平台</title>
 </head>
-<body>
+<frameset rows="88,*,31" cols="*" frameborder="no" border="0" framespacing="0" style="background-color: rgb(204, 232, 207);">
+    <frame th:attr="src=@{/home/top}" name="topFrame" scrolling="No" noresize="noresize" id="topFrame" title="topFrame">
+    <frameset cols="187,*" frameborder="no" border="0" framespacing="0" id="middleFrame">
+        <frame th:attr="src=@{/home/left}" name="leftFrame" scrolling="Yes" noresize="noresize" id="leftFrame" title="leftFrame">
+        <frame th:attr="src=@{/home/default}" name="rightFrame" id="rightFrame" title="rightFrame">
+    </frameset>
+    <frame th:attr="src=@{/home/footer}" name="bottomFrame" scrolling="No" noresize="noresize" id="bottomFrame" title="bottomFrame">
+</frameset>
 
-<p>这是一个段落。</p>
-<p>这是一个段落。</p>
-<p>这是一个段落。</p>
-
-</body>
 </html>
