--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -38,10 +38,10 @@
             <li><span><img th:attr="src=@{/images/help.png}" title="帮助" class="helpimg" /></span><a href="#">帮助</a></li>
             <li><a href="/Home/ChangePassword" target="rightFrame">修改密码</a></li>
             <li><a href="#">关于</a></li>
-            <li><a href="/home/Logout" target="_parent">退出</a></li>
+            <li><a th:href="@{/home/logout}" target="_parent">退出</a></li>
         </ul>
         <div class="user">
-            <span>王志宇</span>
+            <span>bank1</span>
             <i>消息</i>
             <b>0</b>
         </div>
