--- a/src/main/resources/templates/partner/partnerType.html
+++ b/src/main/resources/templates/partner/partnerType.html
@@ -35,8 +35,11 @@
             	// 插入数据
                 //$("#tb_departments").bootstrapTable('insertRow', {index:i, row:result.data[i]});
             //});
-            
-            
+            $("#btn_query").click(function () {
+            	// 插入数据
+                $("#tb_departments").bootstrapTable('refresh');//刷新Table，Bootstrap Table 会自动执行重新查询
+            });
+
         });
         var tableInit ={
         		Init:function(){
@@ -246,8 +249,9 @@
                 var temp = {   //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
                     limit: params.limit,   //
                     offset: params.offset,  //页码
-                    typeid: $("#condition_search_typeid").val(),
-                    typename: $("#condition_search_typename").val()
+                    search: params.search, //搜索
+                    typeid: $("#typeid").val(),
+                    typename: $("#typename").val()
                 };
                 return temp;
             };
